fix: change hyphen string p elements to hr blocks to fix horizontal overflow on smaller screens

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -146,3 +146,8 @@ th {
     justify-content: center;
     margin-bottom: 9px;
 }
+
+.contentText hr {
+    border-top: 1px solid var(--text-color-normal);
+    margin: 6px 0;
+}
